--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "tw-elements": "^1.0.0-beta2",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
